--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@trpc/tanstack-react-query": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "concurrently": "^9.1.2",
